--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "autoprefixer": "^10.4.19",
     "eslint": "9.11.1",
     "eslint-config-next": "^15.2.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.3",
