--- a/package.json
+++ b/package.json
@@ -2,40 +2,44 @@
   "name": "example-app-router",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "contentlayer dev && next dev --turbo",
     "lint": "eslint src && tsc && prettier src --check",
     "test": "pnpm run test:playwright && pnpm run test:jest",
     "test:playwright": "playwright test",
     "test:jest": "jest",
-    "build": "next build",
-    "start": "next start"
+    "build": "contentlayer build && next build",
+    "start": "next start",
+    "contentlayer": "contentlayer dev"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.3",
     "clsx": "^2.1.1",
-    "next": "^15.2.2",
-    "next-intl": "^4.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss": "^3.4.4"
+    "next": "^15.2.4",
+    "next-contentlayer": "^0.3.4",
+    "next-intl": "^4.0.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/eslintrc": "^3.3.1",
     "@jest/globals": "^29.7.0",
-    "@playwright/test": "^1.51.0",
-    "@testing-library/react": "^16.2.0",
-    "@types/jest": "^29.5.12",
-    "@types/lodash": "^4.17.5",
-    "@types/node": "^20.14.5",
-    "@types/react": "^19.0.0",
-    "autoprefixer": "^10.4.19",
-    "eslint": "9.11.1",
-    "eslint-config-next": "^15.2.0",
+    "@playwright/test": "^1.51.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.16",
+    "@types/node": "^22.14.0",
+    "@types/react": "^19.1.0",
+    "autoprefixer": "^10.4.21",
+    "contentlayer": "^0.3.4",
+    "eslint": "9.24.0",
+    "eslint-config-next": "^15.2.4",
     "eslint-plugin-react-hooks": "^5.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.3",
-    "prettier": "^3.3.3",
-    "typescript": "^5.5.3"
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.3"
   },
   "prettier": {
     "singleQuote": true,
