--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "example-app-router",
   "private": true,
   "scripts": {
-    "dev": "contentlayer dev && next dev --turbo",
+    "dev": "next dev --turbo",
     "lint": "eslint src && tsc && prettier src --check",
     "test": "pnpm run test:playwright && pnpm run test:jest",
     "test:playwright": "playwright test",
     "test:jest": "jest",
-    "build": "contentlayer build && next build",
+    "build": "next build",
     "start": "next start",
     "contentlayer": "contentlayer dev"
   },
