--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "contentlayer/generated": [".contentlayer/generated"]
+      "content-collections": ["./.content-collections/generated"]
     },
     "baseUrl": "."
   },
